--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-
+  <div>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum optio repellat neque odio, molestias maxime,
+      exercitationem magnam atque excepturi inventore culpa suscipit fugit. Eum beatae saepe commodi vel ad esse.</span>
+  </div>
 </body>
 
 </html>
